[package]
name = "reverse_tower_defense"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.126"
console_error_panic_hook = { version = "0.1.7", optional = true }
panic = "0.4.0"
uuid = {version = "1.23.4", features=["js"]}
js-sys = "0.3.103"
web-sys = "0.3.103"
wasm-bindgen-futures = "0.4.76"

[profile.release]
opt-level = 3

[features]
default = ["init_panic_hook"]
init_panic_hook = ["console_error_panic_hook"]
